force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/Pricing_Bid_Log_Detail_Version_History__c.object-meta.xml
<CustomObject>
    <label>Pricing Bid Log Detail Version History</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Pricing Bid Log Detail Version History N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Bid Logs Detail Version History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>