force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/BU_Warranty__c.field-meta.xml
<CustomField>
    <fullName>BU_Warranty__c</fullName>
    <label>BU Warranty</label>
    <length>100</length>
    <type>Text</type>
</CustomField>