force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Controllable_GM__c.field-meta.xml
<CustomField>
    <fullName>Controllable_GM__c</fullName>
    <label>Controllable GM (%)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>