force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>