force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>