force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency__c</fullName>
    <label>Local Currency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>