force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Pricing_Bid_Log_Version_History__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Bid_Log_Version_History__c</fullName>
    <label>Pricing Bid Log Version History</label>
    <referenceTo>Pricing_Bid_Log_Version_History__c</referenceTo>
    <relationshipLabel>Pricing Bid Logs Version History</relationshipLabel>
    <relationshipName>Pricing_Bid_Logs_Version_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>