force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>