force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Product_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Product_Revenue__c</fullName>
    <label>Product Revenue ($)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>