force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/SAMY_Type__c.field-meta.xml
<CustomField>
    <fullName>SAMY_Type__c</fullName>
    <label>SAMY Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>