force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Scope_Erosion_GM_Change_USD__c.field-meta.xml
<CustomField>
    <fullName>Scope_Erosion_GM_Change_USD__c</fullName>
    <label>Scope Erosion (GM Change USD)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>