force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect__c</fullName>
    <label>Solution Architect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>