force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/fields/SSC_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>SSC_Salesperson__c</fullName>
    <label>SSC (Salesperson)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>