force-app/main/default/objects/Pricing_Bid_Log_Detail_Version_History__c/recordTypes/Solution_Bid_Log.recordType-meta.xml
<RecordType>
    <fullName>Solution_Bid_Log</fullName>
    <active>true</active>
    <label>Solution Bid Log</label>
</RecordType>